<resources>
    <string name="app_name">Bicycle app</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="bicycle">Bicycle</string>
    <string name="bike_ride">Bike Ride</string>
    <string name="login_to_ride">Login to ride</string>
    <string name="mobile_no">Mobile no</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="forget_pw">forget password</string>
    <string name="login_via_otp">Login via OTP</string>
    <string name="name">Name</string>
    <string name="get_started">Get started</string>
    <string name="we_will_send_otp">We\'ll send you OTP to verify</string>
    <string name="already_have_ac">Already have an account?</string>
    <string name="sign_in"> Sign in</string>
    <string name="est_1981">EST 1981</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="didnt_receive_otp">If you didn\'t receive code!</string>
    <string name="recend_otp">Resend</string>
    <string name="explore_welcome_text1">Explore new ways with travel bikes \n Travel on your foots</string>
    <string name="how_to_book"><![CDATA[How to Book & Start Ride]]></string>
    <string name="reach_to_our_bike">Reach to our bike center near you</string>
    <string name="check_bicycle_condition">Check bicycle condition</string>
    <string name="book_a_ride">Book a ride</string>
    <string name="pay_online_and_enjoy"><![CDATA[Pay online & enjoy your ride]]></string>
    <string name="Notification">Notification</string>
    <string name="payment">Payment</string>
    <string name="booking_history">Booking history</string>
    <string name="Profile">Profile</string>
    <string name="contact_us">Contact us</string>
    <string name="explore_new_spot">Explore new spot</string>
    <string name="refer_friend">Refer to a friend</string>
    <string name="help">Help</string>
    <string name="how_to_ride">How to ride</string>
    <string name="safety" >Safety</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="about_us">About us</string>
    <string name="home">Home</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="bikes_center_near_you">Bikes center near you</string>
    <string name="road_mountain_bycle">Road, Mountain, Bicycle</string>
    <string name="book_ride_now">Book a Ride Now</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="today">Today</string>
    <string name="tomorrow" >Tomorrow</string>
    <string name="fare">Fare</string>
    <string name="bicycle_helmet_lock_bottle">(Bicycle, helmet, Lock, Water bottle)</string>
    <string name="deposit">Deposit</string>
    <string name="one_tine_refund">(One time until refund)</string>
    <string name="refundable">Refundable</string>
    <string name="you_pay">You Pay</string>
    <string name="pay_ride"><![CDATA[Pay & Ride]]></string>
    <string name="you_have_successfully_booked">You have successfully booked</string>
    <string name="please_use_this_code">Please use this code to unlock your bike</string>
    <string name="to_pick_bicycle">To pick bicycle go to center</string>
    <string name="reach_to_location">Reach to location</string>
    <string name="skip_navigation">Skip navigation</string>
    <string name="booking_days">Booking Days</string>
    <string name="amount_paid">Amount paid</string>
    <string name="booking_date">Booking date</string>
    <string name="start_ride"><b>Start</b> Ride</string>
    <string name="go_center_pick_ride"><![CDATA[Go to Center & Pick your ride]]></string>
    <string name="navigation">Navigation</string>
    <string name="engage">Engage</string>
    <string name="use_code_unlock">Use code to unlock</string>
    <string name="check_condition">Check Condition</string>
    <string name="return_center">Return to center</string>
    <string name="submit_bike_before_time">Submit bike before timer stops or renew to avoid interruption between ride</string>
    <string name="please_park_bike_at_public_safety">"Please park bike at public or private parking spots for safety "</string>
    <string name="renew">Renew</string>
    <string name="end_ride">End ride</string>
    <string name="done">Done</string>
    <string name="check_bicycle_condition_properly">Check bicycle condition properly before start ride</string>
    <string name="air">Air</string>
    <string name="break_">Break</string>
    <string name="helmet">Helmet</string>
    <string name="seating">Seating</string>
    <string name="renew_ride_now">Renew a Ride Now</string>
    <string name="punture">Punture</string>
    <string name="damage">Damage</string>
    <string name="stolen">Stolen</string>
    <string name="other">Other</string>
    <string name="mention">Mention</string>
    <string name="mention_issue">Mention issue</string>
    <string name="submit">Submit</string>
    <string name="thankyou">Thank You !</string>
    <string name="for_riding_with_us">For Riding with us</string>
    <string name="feedback_valueable">Your Feedback is valuable for us</string>
    <string name="comments">Comment:</string>
    <string name="submit_bith_confirm_code">Submit Your Bike And Confirm \n Code to Center, To Get Refund.</string>
    <string name="enter_here">Enter your text here</string>
    <string name="logout">Logout</string>
    <string name="terms_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="terms_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="wallet">Wallet</string>
    <string name="refund_mode">Refund mode</string>
    <string name="previous">Previous payments</string>
    <string name="refund">Refund</string>
    <string name="upi_mode">UPI Mode</string>
    <string name="add_bank_ac">Add Bank Details</string>
    <string name="selecct_refund_mode_text">Select refund mode and enter details properly to get amount back safety</string>
    <string name="use_a_password">Use a password to avoid delay in OTP</string>
    <string name="save">Save</string>
    <string name="we_very_concern_data_privacy">We are very concern about your data, we respect your privacy</string>
    <string name="book_now">Book now</string>
    <string name="recent">Recent</string>
    <string name="total_amount_paid">Total amount paid</string>
    <string name="return_date">Return date</string>
    <string name="previous_text">Previous</string>
    <string name="refund_completed">Refund completed</string>
    <string name="ride">Ride</string>
    <string name="rupee_sign">₹</string>

    <string-array name="today_tomorrow">
        <item>Today</item>
        <item>Tomorrow</item>
    </string-array>
</resources>
