<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.login_signup.LoginActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                style="@style/text_12_light_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/est_1981">

            </TextView>

            <TextView
                style="@style/text_18_bold_light_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bicycle"
                android:textAlignment="center"
                android:textStyle="bold">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@color/grey_color">

                </View>

                <TextView
                    style="@style/text_12_light_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:text="@string/bike_ride">

                </TextView>

                <View
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@color/grey_color">

                </View>

            </LinearLayout>

            <ImageView
                android:id="@+id/splashscreen"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_15sdp"
                android:src="@drawable/bicycle_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="vertical">


            <TextView
                style="@style/text16_bold_light_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_to_ride"
                android:textAlignment="textStart"
                android:textStyle="bold"></TextView>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:hint="@string/mobile_no">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                style="@style/text_14_light_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/or">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">


                    <TextView
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        style="@style/text_14_light_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forget_pw">

                    </TextView>

                    <TextView
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:id="@+id/tv_login_via_otp"
                        style="@style/text_14_light_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/login_via_otp">

                    </TextView>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="0.5"
                    android:gravity="right">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_login"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:elevation="@dimen/_8sdp"
                        app:cardBackgroundColor="@color/yellow"
                        app:cardCornerRadius="@dimen/_25sdp"
                        app:cardElevation="@dimen/_8sdp">

                        <ImageView
                            android:layout_width="@dimen/_24sdp"
                            android:layout_height="@dimen/_24sdp"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_arrow_right_grey" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>


            </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        </ScrollView>


    </LinearLayout>
</layout>