<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.login_signup.SignUpActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/text_12_light_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/est_1981"
                    android:textAlignment="center">

                </TextView>

                <TextView
                    style="@style/text_18_bold_light_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bicycle"
                    android:textAlignment="center"
                    android:textStyle="bold">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@color/grey_color">

                    </View>

                    <TextView
                        style="@style/text_12_light_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:text="@string/bike_ride">

                    </TextView>

                    <View
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@color/grey_color">

                    </View>

                </LinearLayout>

                <ImageView
                    android:id="@+id/splashscreen"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_15sdp"
                    android:src="@drawable/bicycle_icon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:orientation="vertical">


                    <TextView
                        style="@style/text_18_bold_light_black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/get_started"
                        android:textAlignment="center"
                        android:textStyle="bold">

                    </TextView>

                    <TextView
                        style="@style/text_16_light_black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/we_will_send_otp"
                        android:textAlignment="center">

                    </TextView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:hint="@string/name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_12sdp"
                        android:hint="@string/mobile_no">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.3"
                            android:orientation="horizontal">


                            <TextView
                                style="@style/text_12_light_black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/already_have_ac">

                            </TextView>

                            <TextView
                                android:id="@+id/tv_sign_in"
                                style="@style/text_14_light_black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/_3sdp"
                                android:text="@string/sign_in"
                                android:textStyle="bold">

                            </TextView>


                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_weight="0.7"
                            android:gravity="right">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/card_signup"
                                android:layout_width="@dimen/_50sdp"
                                android:layout_height="@dimen/_50sdp"
                                android:elevation="@dimen/_8sdp"
                                app:cardBackgroundColor="@color/yellow"
                                app:cardCornerRadius="@dimen/_25sdp"
                                app:cardElevation="@dimen/_8sdp">

                                <ImageView
                                    android:layout_width="@dimen/_24sdp"
                                    android:layout_height="@dimen/_24sdp"
                                    android:layout_gravity="center"
                                    app:srcCompat="@drawable/ic_arrow_right_grey" />

                            </androidx.cardview.widget.CardView>

                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


        </ScrollView>

    </RelativeLayout>
</layout>