<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_above="@+id/ll_submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_18_bold_light_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thankyou">

                    </TextView>


                    <TextView
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/_22sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/for_riding_with_us">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_marginTop="@dimen/_10sdp"
                        style="@style/text_14_light_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/feedback_valueable">

                    </TextView>

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="@style/Widget.AppCompat.RatingBar.Indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:progressTint="@color/yellow"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_gravity="start" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:weightSum="1">

                        <TextView
                            style="@style/text_16_light_black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.35"
                            android:padding="5dp"
                            android:text="@string/comments"
                            android:textStyle="normal"
                            android:textAllCaps="true">

                        </TextView>

                        <LinearLayout
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:layout_weight="0.65"
                            android:background="@drawable/bg_line_border"
                            android:orientation="vertical">


                            <EditText
                                android:id="@+id/et_desc"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="start"
                                android:background="@null"
                                android:focusable="true"
                                android:gravity="start"
                                android:hint="@string/enter_here"
                                android:inputType="textMultiLine"
                                android:isScrollContainer="true"
                                android:overScrollMode="always"
                                android:padding="10dp"
                                android:scrollbarStyle="insideInset"
                                android:scrollbars="vertical"
                                android:singleLine="false"
                                android:textAlignment="textStart"
                                android:windowSoftInputMode="stateAlwaysVisible" />

                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/ll_submit"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >

            <TextView
                android:textAlignment="center"
                style="@style/text_16_light_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/submit_bith_confirm_code">

            </TextView>

            <TextView
                android:id="@+id/tv_submit"
                android:background="@color/yellow"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                style="@style/text_14_light_black"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_weight="0.35"
                android:padding="5dp"
                android:text="@string/submit"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>


    </RelativeLayout>
</layout>