<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_above="@id/ll_start_ride"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            style="@style/text_16_light_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/navigation"
            android:textAllCaps="true"
            android:textAlignment="textStart">

        </TextView>


        <RelativeLayout
            android:id="@+id/rl_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_centerInParent="true"
                style="@style/text_14_light_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Map navigation need location paid map api"
                android:textAlignment="center">

            </TextView>


            <TextView
                style="@style/text_14_light_black"
                android:textStyle="bold"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="5dp"
                android:text="@string/go_center_pick_ride"
                android:textAlignment="center">

            </TextView>

        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_start_ride"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:gravity="center"
        android:background="@color/yellow"
        >

        <TextView
            android:textAlignment="center"
            style="@style/text_14_light_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:text="@string/start_ride"
            >

        </TextView>

    </LinearLayout>

</RelativeLayout>
</layout>